fix: amélioration de l'accessibilité des colonnes d'actions dans les tableaux

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                   <th scope="col">slug</th>
                   <th scope="col">min (px)</th>
                   <th scope="col">max (px)</th>
-                  <th scope="col" class="visually-hidden">actions</th>
+                  <th scope="col">
+                    <span class="visually-hidden">actions</span>
+                  </th>
                 </tr>
               </thead>
               <tbody>
@@ -324,7 +326,7 @@
                   <th scope="col">slug</th>
                   <th scope="col">min (px)</th>
                   <th scope="col">max (px)</th>
-                  <th scope="col" class="visually-hidden">actions</th>
+                  <th scope="col"><span class="visually-hidden">actions</span></th
                 </tr>
               </thead>
               <tbody>
