fix: mise à jour des couleurs de sélection et amélioration de la gestion des éléments du tableau

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header class="header" role="banner">
       <h1 class="title-l">Elastic</h1>
     </header>
+    <p class="lead" style="margin: 0 0 1.25rem 0">
+      Elastic est un petit utilitaire pour générer des tailles de police et des
+      espacements fluides (variables CSS avec clamp()). Inspiré par
+      <a href="https://utopia.fyi/" target="_blank" rel="noopener">Utopia</a>.
+    </p>
 
     <main class="main" role="main">
       <div data-layout="duo">
@@ -145,146 +150,6 @@
                     </button>
                   </td>
                 </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="text-xl"
-                      aria-label="slug"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="20"
-                      aria-label="min en pixels"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="30"
-                      aria-label="max en pixels"
-                    />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="text-2xl"
-                      aria-label="slug"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="24"
-                      aria-label="min en pixels"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="36"
-                      aria-label="max en pixels"
-                    />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="text-3xl"
-                      aria-label="slug"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="30"
-                      aria-label="min en pixels"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="48"
-                      aria-label="max en pixels"
-                    />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="text-4xl"
-                      aria-label="slug"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="48"
-                      aria-label="min en pixels"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="80"
-                      aria-label="max en pixels"
-                    />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
-                      ✕
-                    </button>
-                  </td>
-                </tr>
               </tbody>
             </table>
 
@@ -326,7 +191,9 @@
                   <th scope="col">slug</th>
                   <th scope="col">min (px)</th>
                   <th scope="col">max (px)</th>
-                  <th scope="col"><span class="visually-hidden">actions</span></th
+                  <th scope="col">
+                    <span class="visually-hidden">actions</span>
+                  </th>
                 </tr>
               </thead>
               <tbody>
@@ -422,76 +289,6 @@
                       type="number"
                       class="input-max"
                       value="32"
-                      aria-label="max en pixels"
-                    />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="spacing-l"
-                      aria-label="slug"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="24"
-                      aria-label="min en pixels"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="48"
-                      aria-label="max en pixels"
-                    />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="spacing-xl"
-                      aria-label="slug"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="32"
-                      aria-label="min en pixels"
-                    />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="80"
                       aria-label="max en pixels"
                     />
                   </td>
