fix: ajouter des détails sur les espacements fluides dans la description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </header>
     <p class="lead" style="margin: 0 0 1.25rem 0">
       Elastic est un petit utilitaire pour générer des tailles de police et des
-      espacements fluides (variables CSS avec clamp()). Inspiré par
+      espacements fluides (variables CSS avec clamp() entre 360px et 1280px).
+      Inspiré par
       <a href="https://utopia.fyi/" target="_blank" rel="noopener">Utopia</a>.
     </p>
 
