--- a/index.html
+++ b/index.html
@@ -1,45 +1,85 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
     <title>Elastic, générateur d'espacements fluides</title>
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
-    <link rel="stylesheet" href="assets/css/app.css" />
+    <link
+      rel="preload"
+      href="assets/fonts/Dynapuff-VariableFont-opti.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous" />
+
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="img/favicon.svg" />
+    <link
+      rel="stylesheet"
+      href="assets/css/app.css" />
   </head>
   <body data-layout="boxed">
-    <header class="header" role="banner">
+    <header
+      class="header"
+      role="banner">
       <h1 class="title-l">Elastic</h1>
     </header>
-    <p class="lead" style="margin: 0 0 1.25rem 0">
-      Elastic est un petit utilitaire pour générer des tailles de police et des
-      espacements fluides (variables CSS avec clamp() entre 360px et 1280px).
-      Inspiré par
-      <a href="https://utopia.fyi/" target="_blank" rel="noopener">Utopia</a>.
+    <p class="lead">
+      <strong>Elastic</strong> est un petit utilitaire pour générer des tailles
+      de police et des espacements fluides, inspiré par
+      <a
+        href="https://utopia.fyi/"
+        target="_blank"
+        rel="noopener"
+        >Utopia</a
+      >.
+    </p>
+    <p>
+      Indiquez le nom de votre variable, sa valeur minimale et maximale. Elastic
+      vous fournira le code CSS nécessaire pour rendre vos polices et
+      espacements fluides (valeurs en rem avec <code>clamp()</code> entre 360px
+      et 1280px).
     </p>
 
-    <main class="main" role="main">
-      <div data-layout="duo">
-        <section id="clamp-app" aria-labelledby="clamp-app-title">
-          <h2 id="clamp-app-title" class="title-m">
-            Générateur de polices fluides
+    <main
+      class="main"
+      role="main">
+      <div data-layout="stack">
+        <section
+          id="clamp-app"
+          aria-labelledby="clamp-app-title">
+          <h2
+            id="clamp-app-title"
+            class="title-m">
+            <span>Polices</span> fluides
           </h2>
 
-          <p class="visually-hidden" id="clamp-desc">
+          <p
+            class="visually-hidden"
+            id="clamp-desc">
             Tableau éditable : colonnes slug, min (px), max (px). Le CSS généré
             apparaît dans la zone de sortie et est mis à jour automatiquement.
           </p>
 
-          <div role="region" aria-labelledby="clamp-app-title">
-            <table id="clamp-table" class="table" aria-describedby="clamp-desc">
+          <div
+            role="region"
+            aria-labelledby="clamp-app-title">
+            <table
+              id="clamp-table"
+              class="table"
+              aria-describedby="clamp-desc">
               <caption class="visually-hidden">
                 Liste des variables à générer
               </caption>
               <thead>
                 <tr>
-                  <th scope="col">slug</th>
-                  <th scope="col">min (px)</th>
-                  <th scope="col">max (px)</th>
+                  <th scope="col">variable</th>
+                  <th scope="col">min&nbsp;(px)</th>
+                  <th scope="col">Aperçu</th>
+                  <th scope="col">max&nbsp;(px)</th>
                   <th scope="col">
                     <span class="visually-hidden">actions</span>
                   </th>
@@ -52,31 +92,30 @@
                       type="text"
                       class="input-slug"
                       value="text-s"
-                      aria-label="slug"
-                    />
+                      aria-label="slug" />
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-min"
                       value="14"
-                      aria-label="min en pixels"
-                    />
+                      aria-label="min en pixels" />
+                  </td>
+                  <td>
+                    <div class="graph-visual"></div>
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-max"
                       value="14"
-                      aria-label="max en pixels"
-                    />
+                      aria-label="max en pixels" />
                   </td>
                   <td>
                     <button
                       type="button"
                       class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
+                      aria-label="Supprimer la ligne">
                       ✕
                     </button>
                   </td>
@@ -87,31 +126,30 @@
                       type="text"
                       class="input-slug"
                       value="text-m"
-                      aria-label="slug"
-                    />
+                      aria-label="slug" />
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-min"
                       value="16"
-                      aria-label="min en pixels"
-                    />
+                      aria-label="min en pixels" />
+                  </td>
+                  <td>
+                    <div class="graph-visual"></div>
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-max"
                       value="18"
-                      aria-label="max en pixels"
-                    />
+                      aria-label="max en pixels" />
                   </td>
                   <td>
                     <button
                       type="button"
                       class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
+                      aria-label="Supprimer la ligne">
                       ✕
                     </button>
                   </td>
@@ -122,31 +160,30 @@
                       type="text"
                       class="input-slug"
                       value="text-l"
-                      aria-label="slug"
-                    />
+                      aria-label="slug" />
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-min"
                       value="18"
-                      aria-label="min en pixels"
-                    />
+                      aria-label="min en pixels" />
+                  </td>
+                  <td>
+                    <div class="graph-visual"></div>
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-max"
                       value="20"
-                      aria-label="max en pixels"
-                    />
+                      aria-label="max en pixels" />
                   </td>
                   <td>
                     <button
                       type="button"
                       class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
+                      aria-label="Supprimer la ligne">
                       ✕
                     </button>
                   </td>
@@ -154,8 +191,15 @@
               </tbody>
             </table>
 
-            <div data-layout="cluster" data-gap="s" class="controls">
-              <button id="btn-add" type="button">Ajouter une ligne</button>
+            <div
+              data-layout="cluster"
+              data-gap="s"
+              class="controls">
+              <button
+                id="btn-add"
+                type="button">
+                Ajouter une ligne
+              </button>
             </div>
 
             <!-- theme and tokens outputs moved to a dedicated duo section below -->
@@ -163,35 +207,42 @@
             <div
               id="clamp-status"
               class="visually-hidden"
-              aria-live="polite"
-            ></div>
+              aria-live="polite"></div>
           </div>
         </section>
 
-        <section id="spacing-app" aria-labelledby="spacing-app-title">
-          <h2 id="spacing-app-title" class="title-m">
-            Générateur d'espacements fluides
+        <section
+          id="spacing-app"
+          aria-labelledby="spacing-app-title">
+          <h2
+            id="spacing-app-title"
+            class="title-m">
+            <span>Espacements</span> fluides
           </h2>
 
-          <p class="visually-hidden" id="spacing-desc">
+          <p
+            class="visually-hidden"
+            id="spacing-desc">
             Tableau éditable : colonnes slug, min (px), max (px) pour les
             espacements.
           </p>
 
-          <div role="region" aria-labelledby="spacing-app-title">
+          <div
+            role="region"
+            aria-labelledby="spacing-app-title">
             <table
               id="spacing-table"
               class="table"
-              aria-describedby="spacing-desc"
-            >
+              aria-describedby="spacing-desc">
               <caption class="visually-hidden">
                 Liste des espacements à générer
               </caption>
               <thead>
                 <tr>
-                  <th scope="col">slug</th>
-                  <th scope="col">min (px)</th>
-                  <th scope="col">max (px)</th>
+                  <th scope="col">variable</th>
+                  <th scope="col">min&nbsp;(px)</th>
+                  <th scope="col">Aperçu</th>
+                  <th scope="col">max&nbsp;(px)</th>
                   <th scope="col">
                     <span class="visually-hidden">actions</span>
                   </th>
@@ -204,31 +255,30 @@
                       type="text"
                       class="input-slug"
                       value="spacing-xs"
-                      aria-label="slug"
-                    />
+                      aria-label="slug" />
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-min"
                       value="4"
-                      aria-label="min en pixels"
-                    />
+                      aria-label="min en pixels" />
+                  </td>
+                  <td>
+                    <div class="graph-visual"></div>
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-max"
                       value="4"
-                      aria-label="max en pixels"
-                    />
+                      aria-label="max en pixels" />
                   </td>
                   <td>
                     <button
                       type="button"
                       class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
+                      aria-label="Supprimer la ligne">
                       ✕
                     </button>
                   </td>
@@ -239,31 +289,30 @@
                       type="text"
                       class="input-slug"
                       value="spacing-s"
-                      aria-label="slug"
-                    />
+                      aria-label="slug" />
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-min"
                       value="8"
-                      aria-label="min en pixels"
-                    />
+                      aria-label="min en pixels" />
+                  </td>
+                  <td>
+                    <div class="graph-visual"></div>
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-max"
                       value="16"
-                      aria-label="max en pixels"
-                    />
+                      aria-label="max en pixels" />
                   </td>
                   <td>
                     <button
                       type="button"
                       class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
+                      aria-label="Supprimer la ligne">
                       ✕
                     </button>
                   </td>
@@ -274,31 +323,30 @@
                       type="text"
                       class="input-slug"
                       value="spacing-m"
-                      aria-label="slug"
-                    />
+                      aria-label="slug" />
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-min"
                       value="16"
-                      aria-label="min en pixels"
-                    />
+                      aria-label="min en pixels" />
+                  </td>
+                  <td>
+                    <div class="graph-visual"></div>
                   </td>
                   <td>
                     <input
                       type="number"
                       class="input-max"
                       value="32"
-                      aria-label="max en pixels"
-                    />
+                      aria-label="max en pixels" />
                   </td>
                   <td>
                     <button
                       type="button"
                       class="btn-remove"
-                      aria-label="Supprimer la ligne"
-                    >
+                      aria-label="Supprimer la ligne">
                       ✕
                     </button>
                   </td>
@@ -306,8 +354,12 @@
               </tbody>
             </table>
 
-            <div data-layout="cluster" class="controls">
-              <button id="btn-add-spacing" type="button">
+            <div
+              data-layout="cluster"
+              class="controls">
+              <button
+                id="btn-add-spacing"
+                type="button">
                 Ajouter une ligne
               </button>
             </div>
@@ -318,9 +370,12 @@
       <section
         data-layout="duo"
         id="css-outputs"
-        aria-labelledby="css-outputs-title"
-      >
-        <h2 id="css-outputs-title" class="visually-hidden">Sortie CSS</h2>
+        aria-labelledby="css-outputs-title">
+        <h2
+          id="css-outputs-title"
+          class="visually-hidden">
+          Sortie CSS
+        </h2>
         <div class="output-panel">
           <label for="css-output-theme">theme.css</label>
           <div class="code-wrap">
@@ -328,13 +383,11 @@
               id="css-output-theme"
               rows="14"
               cols="40"
-              readonly
-            ></textarea>
+              readonly></textarea>
             <button
               id="btn-copy-theme"
               class="btn-copy-overlay"
-              aria-label="Copier theme.css"
-            >
+              aria-label="Copier theme.css">
               Copier
             </button>
           </div>
@@ -346,24 +399,28 @@
               id="css-output-tokens"
               rows="14"
               cols="40"
-              readonly
-            ></textarea>
+              readonly></textarea>
             <button
               id="btn-copy-tokens"
               class="btn-copy-overlay"
-              aria-label="Copier theme-tokens.css"
-            >
+              aria-label="Copier theme-tokens.css">
               Copier
             </button>
           </div>
         </div>
       </section>
 
-      <img src="img/alsacreations.svg" alt="alsacreations" />
+      <img
+        src="img/alsacreations.svg"
+        alt="alsacreations" />
     </main>
 
-    <footer class="footer" role="contentinfo"></footer>
+    <footer
+      class="footer"
+      role="contentinfo"></footer>
 
-    <script type="module" src="assets/js/clamp/app.js"></script>
+    <script
+      type="module"
+      src="assets/js/clamp/app.js"></script>
   </body>
 </html>
